# domain-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release-docker.yml  wiki.yml
docs/: Architecture.md  Configuration.md  Docker.md  FAQ.md  Home.md  Installation.md  Supported-TLDs.md  Tools.md  _Sidebar.md
scripts/: generate_supported_tlds.py
src/domain_mcp/: __init__.py  __main__.py  checker.py  models.py  normalize.py  server.py  whois_fallback.py
tests/: test_checker.py  test_normalize.py
